--- a/Assets/Scripts/Core/Editor/com.pdxpartyparrot.Core.Editor.asmdef
+++ b/Assets/Scripts/Core/Editor/com.pdxpartyparrot.Core.Editor.asmdef
@@ -5,10 +5,10 @@
         "GUID:07e5bd63f750ef29a96268929ec97b50",
         "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
-    "includePlatforms": [],
-    "excludePlatforms": [
+    "includePlatforms": [
         "Editor"
     ],
+    "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
