--- a/Assets/Scripts/Game/com.pdxpartyparrot.Game.asmdef
+++ b/Assets/Scripts/Game/com.pdxpartyparrot.Game.asmdef
@@ -5,7 +5,8 @@
         "GUID:07e5bd63f750ef29a96268929ec97b50",
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:4307f53044263cf4b835bd812fc161a4",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:8c4dd21966739024fbd72155091d199e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
