--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.addressables": "1.19.17",
+    "com.unity.ai.navigation": "1.0.0-exp.4",
     "com.unity.assetbundlebrowser": "1.7.0",
     "com.unity.cinemachine": "2.8.4",
     "com.unity.collab-proxy": "1.15.7",
