--- a/Assets/Scripts/Game/com.pdxpartyparrot.Game.asmdef
+++ b/Assets/Scripts/Game/com.pdxpartyparrot.Game.asmdef
@@ -6,7 +6,9 @@
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:4307f53044263cf4b835bd812fc161a4",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:8c4dd21966739024fbd72155091d199e"
+        "GUID:8c4dd21966739024fbd72155091d199e",
+        "GUID:21b0c8d1703a94250bfac916590cea4f",
+        "GUID:ea715009a4efd4c6cbc85be3ae097dd3"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
