--- a/Assets/Scripts/ggj2022/com.pdxpartyparrot.ggj2022.asmdef
+++ b/Assets/Scripts/ggj2022/com.pdxpartyparrot.ggj2022.asmdef
@@ -5,7 +5,9 @@
         "GUID:07e5bd63f750ef29a96268929ec97b50",
         "GUID:27ea4d39582179328befd3eeb7616a02",
         "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:21b0c8d1703a94250bfac916590cea4f",
+        "GUID:ea715009a4efd4c6cbc85be3ae097dd3"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
