--- a/Assets/Scripts/Core/Editor/com.pdxpartyparrot.Core.Editor.asmdef
+++ b/Assets/Scripts/Core/Editor/com.pdxpartyparrot.Core.Editor.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:07e5bd63f750ef29a96268929ec97b50",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:4307f53044263cf4b835bd812fc161a4"
     ],
     "includePlatforms": [
         "Editor"
