--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.ide.vscode": "1.2.4",
     "com.unity.inputsystem": "1.3.0",
     "com.unity.mathematics": "1.2.5",
+    "com.unity.netcode.gameobjects": "1.0.0-pre.5",
     "com.unity.polybrush": "1.1.2",
     "com.unity.postprocessing": "3.2.0",
     "com.unity.probuilder": "5.0.3",
