--- a/Assets/Scripts/Core/com.pdxpartyparrot.Core.asmdef
+++ b/Assets/Scripts/Core/com.pdxpartyparrot.Core.asmdef
@@ -7,7 +7,8 @@
         "GUID:d60799ab2a985554ea1a39cd38695018",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:21b0c8d1703a94250bfac916590cea4f",
-        "GUID:ea715009a4efd4c6cbc85be3ae097dd3"
+        "GUID:ea715009a4efd4c6cbc85be3ae097dd3",
+        "GUID:1491147abca9d7d4bb7105af628b223e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
