Some more netcode conversion

--- a/.pdxpartyparrot_project.json
+++ b/.pdxpartyparrot_project.json
@@ -1,1 +1,1 @@
-{"_version":1,"_useSpine":false,"_useDOTween":true,"_useNetworking":false,"_useNavMesh":true}
+{"_version":1,"_useSpine":false,"_useDOTween":true,"_useNetworking":false,"_enableServerSpectator":false,"_useNavMesh":true}
