--- a/Assets/Scripts/Core/com.pdxpartyparrot.Core.asmdef
+++ b/Assets/Scripts/Core/com.pdxpartyparrot.Core.asmdef
@@ -8,7 +8,8 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:21b0c8d1703a94250bfac916590cea4f",
         "GUID:ea715009a4efd4c6cbc85be3ae097dd3",
-        "GUID:1491147abca9d7d4bb7105af628b223e"
+        "GUID:1491147abca9d7d4bb7105af628b223e",
+        "GUID:3b8ed52f1b5c64994af4c4e0aa4b6c4b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
